prevent scrolling on mobile

--- a/css/base.css
+++ b/css/base.css
@@ -333,6 +333,7 @@ svg.iconSmall {
 	" . "
 	"footer";
 	max-height: 95vh;
+	overflow: hidden;
     }
 
     .main {
